fixed missing borders

--- a/src/style/_reset.scss
+++ b/src/style/_reset.scss
@@ -20,7 +20,7 @@ textarea::before,
 select,
 select::after,
 select::before {
-  border: none !important;
-  outline: none !important;
+  border: none;
+  outline: none;
   filter: none;
 }
